Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46824

QtMultimediaQuick_p which is not a valid bundle identifier

XMLWordPrintable

    • 4738b450d26b6cdaed6f9f11f0dc22b842c124df

      I try to publish my Qt application to the mac App store.
      During apple validation I get the error:

      .../Contents/Frameworks/QtMultimediaQuick_p.framework] using the bundle identifier 'org.qt.project.QtMultimediaQuick_p', which is not a valid bundle identifier.

      If org.qt.project.QtMultimediaQuick_p is replaced by org.qt.project.QtMultimediaQuickp everything work.

        For Gerrit Dashboard: QTBUG-46824
        # Subject Branch Project Status CR V

            sorvig Morten Sørvig
            liryna Adrien JUND
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes